--- a/src/graph/blocks/Block.scss
+++ b/src/graph/blocks/Block.scss
@@ -21,7 +21,7 @@
     color: rgb(224, 224, 224);
     border-radius: 12px;    
     border: 2px solid rgba(99, 99, 99, 0.0);
-    box-shadow: 0 0 5px rgb(99, 99, 99);
+    box-shadow: 0 0 5px rgba(51, 51, 51, 0.521);
     
 
     .row { 
